master:

 - Added new and changed existing constants in namespace Biomol::ResidueType which now fully cover the 
   set of residue types defined in the mmCIF/PDBX specification
 - Added method to classes Biomol::ResidueDictionary/Biomol::ResidueDictionary::Entry for the lookup of residue parent structure information
 - Added method to classes Biomol::ResidueDictionary/Biomol::ResidueDictionary::Entry for the lookup of residue one letter codes
 - Renamed some previously PDB format-specific control-parameters and associated functions in namespace Biomol for their
   future dual-use by the mmCIF data I/O code
 - Added new control-parameters, atom properties and associated functions to namespace Biomol
 - Updated embedded MessagePack library to version 6.1.1
 - Updated embedded SQLite3 database to version 3.46.1
 - Updated embedded MMTF library to version 1.1.0
 - Updated PDB residue dictionary, now covering 43441 chemical components
 - CDPL Python bindings now support NumPy V>=2.0
 - Removed function Biomol::convertMOL2ToPDBResidueInfo(): if possible, the conversion of MOL2 substructure to
   PDB residue/sequence information is now carried out automatically
 - Fixed a bug in program 'ChOX' that prevented the successful saving of data to PSD files
 - Program 'ChOX' now uses the same file open/save dialog instance for all opened main windows 
 - New class Chem::MultiSubstructureSearch for performing substructure matching with multiple query structures that
   can be combined in the form of boolean expressions
 - Program 'ChOX' now supports basic cut/copy/paste as well as drag and drop operations
 - New feature of the program 'ChOX' that allows to perform substructure searching with logical combinations of SMARTS patterns
 - New feature of the program 'ChOX' that allows to highlight substructures defined by SMARTS patterns
 - New classes Descr::NPoint2DPharmacophoreFingerprintGenerator and Descr::NPoint3DPharmacophoreFingerprintGeneratorfor