@@ -125,6 +125,13 @@ Chemoinformatics - A Textbook; Johann Gasteiger and Thomas Engel (Eds.), WILEY-V
 </tr>
 
 <tr>
+<td valign="top">\anchor CML<i>[CML]</i></td>
+<td valign="top">
+<i>Chemical Markup Language</i> documentation: https://www.xml-cml.org/
+</td>
+</tr>
+
+<tr>
 <td valign="top">\anchor CSCP<i>[CSCP]</i></td>
 <td valign="top">
 A. P. Bento <i>et al.</i>,
